Add missing metadata jars to docker descriptors.

--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -1,61 +1,182 @@
 source.debezium=docker:springcloudstream/debezium-source-kafka:@apps.docker.tag@
+source.debezium.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/debezium-source-kafka/@apps.version@/debezium-source-kafka-@apps.version@-metadata.jar
+
 source.file=docker:springcloudstream/file-source-kafka:@apps.docker.tag@
+source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@apps.version@/file-source-kafka-@apps.version@-metadata.jar
+
 source.ftp=docker:springcloudstream/ftp-source-kafka:@apps.docker.tag@
+source.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-kafka/@apps.version@/ftp-source-kafka-@apps.version@-metadata.jar
+
 source.http=docker:springcloudstream/http-source-kafka:@apps.docker.tag@
+source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@apps.version@/http-source-kafka-@apps.version@-metadata.jar
+
 source.jdbc=docker:springcloudstream/jdbc-source-kafka:@apps.docker.tag@
-source.kafka=docker:springcloudstream/kafka-source-kafka:@apps.docker.tag@
+source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@apps.version@/jdbc-source-kafka-@apps.version@-metadata.jar
+
 source.jms=docker:springcloudstream/jms-source-kafka:@apps.docker.tag@
+source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-kafka/@apps.version@/jms-source-kafka-@apps.version@-metadata.jar
+
+source.kafka=docker:springcloudstream/kafka-source-kafka:@apps.docker.tag@
+source.kafka.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-source-kafka/@apps.version@/kafka-source-kafka-@apps.version@-metadata.jar
+
 source.load-generator=docker:springcloudstream/load-generator-source-kafka:@apps.docker.tag@
+source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@apps.version@/load-generator-source-kafka-@apps.version@-metadata.jar
+
 source.mail=docker:springcloudstream/mail-source-kafka:@apps.docker.tag@
+source.mail.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-kafka/@apps.version@/mail-source-kafka-@apps.version@-metadata.jar
+
 source.mongodb=docker:springcloudstream/mongodb-source-kafka:@apps.docker.tag@
+source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@apps.version@/mongodb-source-kafka-@apps.version@-metadata.jar
+
 source.mqtt=docker:springcloudstream/mqtt-source-kafka:@apps.docker.tag@
+source.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-kafka/@apps.version@/mqtt-source-kafka-@apps.version@-metadata.jar
+
 source.rabbit=docker:springcloudstream/rabbit-source-kafka:@apps.docker.tag@
+source.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-kafka/@apps.version@/rabbit-source-kafka-@apps.version@-metadata.jar
+
 source.s3=docker:springcloudstream/s3-source-kafka:@apps.docker.tag@
+source.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-kafka/@apps.version@/s3-source-kafka-@apps.version@-metadata.jar
+
 source.sftp=docker:springcloudstream/sftp-source-kafka:@apps.docker.tag@
+source.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-kafka/@apps.version@/sftp-source-kafka-@apps.version@-metadata.jar
+
 source.syslog=docker:springcloudstream/syslog-source-kafka:@apps.docker.tag@
+source.syslog.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/syslog-source-kafka/@apps.version@/syslog-source-kafka-@apps.version@-metadata.jar
+
 source.tcp=docker:springcloudstream/tcp-source-kafka:@apps.docker.tag@
+source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@apps.version@/tcp-source-kafka-@apps.version@-metadata.jar
+
 source.time=docker:springcloudstream/time-source-kafka:@apps.docker.tag@
+source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@apps.version@/time-source-kafka-@apps.version@-metadata.jar
+
 source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@apps.docker.tag@
+source.twitter-message.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-source-kafka/@apps.version@/twitter-message-source-kafka-@apps.version@-metadata.jar
+
 source.twitter-search=docker:springcloudstream/twitter-search-source-kafka:@apps.docker.tag@
+source.twitter-search.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-search-source-kafka/@apps.version@/twitter-search-source-kafka-@apps.version@-metadata.jar
+
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@apps.docker.tag@
+source.twitter-stream.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-kafka/@apps.version@/twitter-stream-source-kafka-@apps.version@-metadata.jar
+
 source.websocket=docker:springcloudstream/websocket-source-kafka:@apps.docker.tag@
+source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@apps.version@/websocket-source-kafka-@apps.version@-metadata.jar
+
 source.xmpp=docker:springcloudstream/xmpp-source-kafka:@apps.docker.tag@
+source.xmpp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@-metadata.jar
+
 source.zeromq=docker:springcloudstream/zeromq-source-kafka:@apps.docker.tag@
+source.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@-metadata.jar
+
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@apps.docker.tag@
+sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@apps.version@/cassandra-sink-kafka-@apps.version@-metadata.jar
+
 sink.analytics=docker:springcloudstream/analytics-sink-kafka:@apps.docker.tag@
+sink.analytics.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@apps.version@/analytics-sink-kafka-@apps.version@-metadata.jar
+
 sink.elasticsearch=docker:springcloudstream/elasticsearch-sink-kafka:@apps.docker.tag@
+sink.elasticsearch.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/elasticsearch-sink-kafka/@apps.version@/elasticsearch-sink-kafka-@apps.version@-metadata.jar
+
 sink.wavefront=docker:springcloudstream/wavefront-sink-kafka:@apps.docker.tag@
+sink.wavefront.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/wavefront-sink-kafka/@apps.version@/wavefront-sink-kafka-@apps.version@-metadata.jar
+
 sink.file=docker:springcloudstream/file-sink-kafka:@apps.docker.tag@
+sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@apps.version@/file-sink-kafka-@apps.version@-metadata.jar
+
 sink.ftp=docker:springcloudstream/ftp-sink-kafka:@apps.docker.tag@
+sink.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@apps.version@/ftp-sink-kafka-@apps.version@-metadata.jar
+
 sink.jdbc=docker:springcloudstream/jdbc-sink-kafka:@apps.docker.tag@
+sink.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-kafka/@apps.version@/jdbc-sink-kafka-@apps.version@-metadata.jar
+
 sink.kafka=docker:springcloudstream/kafka-sink-kafka:@apps.docker.tag@
+sink.kafka.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-sink-kafka/@apps.version@/kafka-sink-kafka-@apps.version@-metadata.jar
+
 sink.log=docker:springcloudstream/log-sink-kafka:@apps.docker.tag@
+sink.log.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-kafka/@apps.version@/log-sink-kafka-@apps.version@-metadata.jar
+
 sink.mongodb=docker:springcloudstream/mongodb-sink-kafka:@apps.docker.tag@
+sink.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-kafka/@apps.version@/mongodb-sink-kafka-@apps.version@-metadata.jar
+
 sink.mqtt=docker:springcloudstream/mqtt-sink-kafka:@apps.docker.tag@
+sink.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-kafka/@apps.version@/mqtt-sink-kafka-@apps.version@-metadata.jar
+
 sink.pgcopy=docker:springcloudstream/pgcopy-sink-kafka:@apps.docker.tag@
+sink.pgcopy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/pgcopy-sink-kafka/@apps.version@/pgcopy-sink-kafka-@apps.version@-metadata.jar
+
 sink.rabbit=docker:springcloudstream/rabbit-sink-kafka:@apps.docker.tag@
+sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-kafka/@apps.version@/rabbit-sink-kafka-@apps.version@-metadata.jar
+
 sink.redis=docker:springcloudstream/redis-sink-kafka:@apps.docker.tag@
+sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@apps.version@/redis-sink-kafka-@apps.version@-metadata.jar
+
 sink.router=docker:springcloudstream/router-sink-kafka:@apps.docker.tag@
+sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@apps.version@/router-sink-kafka-@apps.version@-metadata.jar
+
 sink.rsocket=docker:springcloudstream/rsocket-sink-kafka:@apps.docker.tag@
+sink.rsocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rsocket-sink-kafka/@apps.version@/rsocket-sink-kafka-@apps.version@-metadata.jar
+
 sink.s3=docker:springcloudstream/s3-sink-kafka:@apps.docker.tag@
+sink.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-kafka/@apps.version@/s3-sink-kafka-@apps.version@-metadata.jar
+
 sink.sftp=docker:springcloudstream/sftp-sink-kafka:@apps.docker.tag@
+sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@apps.version@/sftp-sink-kafka-@apps.version@-metadata.jar
+
 sink.tcp=docker:springcloudstream/tcp-sink-kafka:@apps.docker.tag@
+sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@apps.version@/tcp-sink-kafka-@apps.version@-metadata.jar
+
 sink.throughput=docker:springcloudstream/throughput-sink-kafka:@apps.docker.tag@
+sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@apps.version@/throughput-sink-kafka-@apps.version@-metadata.jar
+
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-kafka:@apps.docker.tag@
+sink.twitter-message.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-sink-kafka/@apps.version@/twitter-message-sink-kafka-@apps.version@-metadata.jar
+
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-kafka:@apps.docker.tag@
+sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@apps.version@/twitter-update-sink-kafka-@apps.version@-metadata.jar
+
 sink.websocket=docker:springcloudstream/websocket-sink-kafka:@apps.docker.tag@
+sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@apps.version@/websocket-sink-kafka-@apps.version@-metadata.jar
+
 sink.xmpp=docker:springcloudstream/xmpp-sink-kafka:@apps.docker.tag@
+sink.xmpp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@-metadata.jar
+
 sink.zeromq=docker:springcloudstream/zeromq-sink-kafka:@apps.docker.tag@
+sink.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@-metadata.jar
+
 processor.aggregator=docker:springcloudstream/aggregator-processor-kafka:@apps.docker.tag@
+processor.aggregator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@apps.version@/aggregator-processor-kafka-@apps.version@-metadata.jar
+
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@apps.docker.tag@
+processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@apps.version@/bridge-processor-kafka-@apps.version@-metadata.jar
+
 processor.filter=docker:springcloudstream/filter-processor-kafka:@apps.docker.tag@
+processor.filter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-kafka/@apps.version@/filter-processor-kafka-@apps.version@-metadata.jar
+
 processor.groovy=docker:springcloudstream/groovy-processor-kafka:@apps.docker.tag@
+processor.groovy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-processor-kafka/@apps.version@/groovy-processor-kafka-@apps.version@-metadata.jar
+
 processor.header-enricher=docker:springcloudstream/header-enricher-processor-kafka:@apps.docker.tag@
+processor.header-enricher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/header-enricher-processor-kafka/@apps.version@/header-enricher-processor-kafka-@apps.version@-metadata.jar
+
 processor.http-request=docker:springcloudstream/http-request-processor-kafka:@apps.docker.tag@
+processor.http-request.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-request-processor-kafka/@apps.version@/http-request-processor-kafka-@apps.version@-metadata.jar
+
 processor.image-recognition=docker:springcloudstream/image-recognition-processor-kafka:@apps.docker.tag@
+processor.image-recognition.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/image-recognition-processor-kafka/@apps.version@/image-recognition-processor-kafka-@apps.version@-metadata.jar
+
 processor.object-detection=docker:springcloudstream/object-detection-processor-kafka:@apps.docker.tag@
+processor.object-detection.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/object-detection-processor-kafka/@apps.version@/object-detection-processor-kafka-@apps.version@-metadata.jar
+
 processor.semantic-segmentation=docker:springcloudstream/semantic-segmentation-processor-kafka:@apps.docker.tag@
+processor.semantic-segmentation.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/semantic-segmentation-processor-kafka/@apps.version@/semantic-segmentation-processor-kafka-@apps.version@-metadata.jar
+
 processor.script=docker:springcloudstream/script-processor-kafka:@apps.docker.tag@
+processor.script.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/script-processor-kafka/@apps.version@/script-processor-kafka-@apps.version@-metadata.jar
+
 processor.splitter=docker:springcloudstream/splitter-processor-kafka:@apps.docker.tag@
+processor.splitter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-kafka/@apps.version@/splitter-processor-kafka-@apps.version@-metadata.jar
+
 processor.transform=docker:springcloudstream/transform-processor-kafka:@apps.docker.tag@
+processor.transform.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/transform-processor-kafka/@apps.version@/transform-processor-kafka-@apps.version@-metadata.jar
+
 processor.twitter-trend=docker:springcloudstream/twitter-trend-processor-kafka:@apps.docker.tag@
+processor.twitter-trend.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-trend-processor-kafka/@apps.version@/twitter-trend-processor-kafka-@apps.version@-metadata.jar
