--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<spring-boot.version>3.3.0</spring-boot.version>
+		<spring-boot.version>3.3.2</spring-boot.version>
 		<stream-apps-core.version>5.0.0-SNAPSHOT</stream-apps-core.version>
 		<java-cfenv-boot.version>2.4.1</java-cfenv-boot.version>
 		<app-metadata-maven-plugin-version>1.1.0-SNAPSHOT</app-metadata-maven-plugin-version>
@@ -43,6 +43,22 @@
 						<global>
 							<application>
 								<bootVersion>${spring-boot.version}</bootVersion>
+								<skipNativeTests>true</skipNativeTests>
+								<nativeConfiguration><![CDATA[
+									<metadataRepository>
+                            			<enabled>true</enabled>
+                        			</metadataRepository>
+                        			<requiredVersion>22.1</requiredVersion>
+								]]>
+								</nativeConfiguration>
+								<bootExecution><![CDATA[
+									<execution>
+										<id>process-aot</id>
+										<goals>
+											<goal>process-aot</goal>
+										</goals>
+									</execution>
+								]]></bootExecution>
 								<metadata>
 									<mavenPluginVersion>3.3.0</mavenPluginVersion>
 								</metadata>
@@ -219,7 +235,7 @@
 			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
-				<version>${app-metadata-maven-plugin-version}</version>
+				<version>1.0.0-SNAPSHOT</version>
 
 				<configuration>
 					<generatedProjectHome>./target/apps</generatedProjectHome>
