--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -59,6 +59,8 @@
         <curator.version>5.5.0</curator.version>
         <mavenThreads>1</mavenThreads>
 
+		<!-- Nothing has changed but we want to see if this is building -->
+
 		<!--suppress UnresolvedMavenProperty -->
 		<buildName>${env.BUILD_NAME}</buildName>
 		<!--suppress UnresolvedMavenProperty -->
