--- a/.github/workflows/ci-2021-1-x.yml
+++ b/.github/workflows/ci-2021-1-x.yml
@@ -22,6 +22,7 @@ jobs:
       GCP_CRED_JSON: ${{ secrets.GCP_CRED_JSON }}
       ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
       ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+      JF_ARTIFACTORY_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
     with:
       branch: '2021.1.x'
       verbose: ${{ inputs.verbose == 'true' }}
