--- a/.github/workflows/descriptor.yml
+++ b/.github/workflows/descriptor.yml
@@ -128,18 +128,10 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
-        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-      - name: 'Configure: Install GraalVM'
-        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
-        uses: graalvm/setup-graalvm@v1
-        with:
-          version: 'latest'
-          java-version: ${{ needs.parameters.outputs.jdk_build }}
-          components: 'js'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          distribution: 'liberica'
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
         with:
